[gd_scene load_steps=52 format=3 uid="uid://di7fkwggxabdc"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7qcun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sag81"]
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur2nv"]
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jhnc"]
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ans66"]
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ep8g"]
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayox5"]
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv8bu"]
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjba2"]
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scx06"]
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqkct"]
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrjhw"]
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43488"]
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv7p8"]
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ketye"]
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whwtv"]
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie4k5"]
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtqey"]
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4wlu"]
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl12r"]
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssvan"]
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coysq"]
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukoo6"]
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vovx"]
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuc70"]
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muqej"]
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m4fb"]
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v42v"]
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1msux"]
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox0xe"]
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6fv0"]
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xxnp"]
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqfvb"]
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uldra"]
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3s5s"]
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2jbn"]
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1abp"]
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cilad"]
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr5us"]
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xv02q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sag81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur2nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jhnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ans66")
}],
"loop": true,
"name": &"idle_v2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ep8g")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayox5")
}],
"loop": true,
"name": &"jump_v2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv8bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjba2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scx06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqkct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrjhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43488")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv7p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ketye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whwtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie4k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtqey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4wlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl12r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coysq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukoo6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vovx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuc70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muqej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m4fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1msux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox0xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6fv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xxnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqfvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uldra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3s5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2jbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1abp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cilad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr5us")
}],
"loop": true,
"name": &"run_v2",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_niqdo"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgo6c"]
size = Vector2(3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gmb4"]
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oewk2"]
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06750"]
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xsf4"]
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7fr7"]
region = Rect2(0, 38, 32, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvudr"]
region = Rect2(32, 38, 32, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuktc"]
region = Rect2(64, 38, 32, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo74n"]
region = Rect2(96, 38, 32, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhgg7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oewk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06750")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xsf4")
}],
"loop": true,
"name": &"hands",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7fr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvudr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuktc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo74n")
}],
"loop": true,
"name": &"stone",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_7qcun")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_xv02q")
animation = &"idle_v2"
autoplay = "idle_v2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_niqdo")

[node name="grab_area" type="Area2D" parent="." groups=["grab_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="grab_area"]
position = Vector2(7, -6)
shape = SubResource("RectangleShape2D_fgo6c")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="stone_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -6)
scale = Vector2(0.6875, 0.618421)
sprite_frames = SubResource("SpriteFrames_mhgg7")
animation = &"hands"
autoplay = "stone"
frame_progress = 0.75819

[node name="coyote_timer" type="Timer" parent="."]

[connection signal="area_entered" from="grab_area" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="grab_area" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="grab_area" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="grab_area" to="." method="_on_grab_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="coyote_timer" to="." method="coyote_timeout"]
